--- a/src/css/app.css
+++ b/src/css/app.css
@@ -27,12 +27,12 @@ h2 {
     margin: auto;
     margin-top: -10px;
 }
-.loginContainer {
+.login-page {
   width: 90%;
   padding: 8% 0 0;
   margin: auto;
 }
-.form {
+form {
   position: relative;
   z-index: 1;
   background: #191c29;
@@ -54,6 +54,7 @@ h2 {
   box-sizing: border-box;
   font-size: 14px;
 }
+
 .form button {
   font-family: "Poppins", sans-serif;
   text-transform: uppercase;
@@ -79,9 +80,6 @@ h2 {
 .form .message a {
   color: #5ddcff;
   text-decoration: none;
-}
-.form .register-form {
-  display: none;
 }
 
 .form:hover {
@@ -160,7 +158,7 @@ button {
     
   }
 
-  .login-buttons {
+  .buttons {
     display: flex;
     flex-direction: column;
     justify-content: center;
