--- a/src/css/app.css
+++ b/src/css/app.css
@@ -15,6 +15,7 @@ h1 {
     color: #fff;
     text-transform: uppercase;
     letter-spacing: 4px;
+    text-align: center;
 }
 
 h2 {
@@ -25,7 +26,19 @@ h2 {
     text-align: center;
     width: 360px;
     margin: auto;
-    margin-top: -10px;
+}
+
+h2.welcome {
+  color: rgb(171, 171, 171);
+}
+
+h2.your-projects {
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 60px;
+  text-transform: underline;
+  font-size: 1.2em;
 }
 .login-page {
   width: 90%;
@@ -69,8 +82,9 @@ form {
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
+ button:hover, button:active, button:focus {
   background: #4ebad8;
+  transition: ease-in-out 0.3s;
 }
 .form .message {
   margin: 15px 0 0;
@@ -138,8 +152,9 @@ form {
 
 
 button {
-    background-color: #F4B400;
-    border-radius: 70px;
+    background-color: rgba(158, 158, 158, 0.254);
+    /* background: #191c29; */
+    border-radius: 8px;
     cursor: pointer; 
 
       margin-top: 20px;
@@ -158,7 +173,7 @@ button {
     
   }
 
-  .buttons {
+  .editProfile-container, .login-container, .register-container, .profile-container ,.projectDetail-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -174,6 +189,14 @@ button {
     margin: 0 auto;
   }
 
+  /*
+  * Firebase 0Auth google, facebook, twitter button 
+  */
+
+  button.google {
+    background-color: #FBBC04;
+    border-radius: 70px;
+  }
   button.google:hover {
     background-color: #000;
     transition: all 0.4s ease-in-out;
@@ -199,3 +222,451 @@ button {
     background-color: #000;
     transition: all 0.4s ease-in-out;
   }
+
+  /*
+  * Edit Profile Page
+  */
+
+  /* Profile details edit component */
+
+.edit-profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.editProfile-container h3, .editProject-container h3 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.editProfile-container form, .editProject-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.editProfile-container form h3, .editProject-container form h3 {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.editProfile-container form input[type="text"], .editProject-container form input[type="text"], .editProject-container textarea {
+
+  font-family: "Poppins", sans-serif;
+  outline: 0;
+  background: #2d2f38;
+  color: #fff;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+.editProfile-container form input[type="text"]:focus, .editProject-container form input[type="text"]:focus {
+  border: 2px solid #555;
+}
+
+.editProfile-container button, .editProject-container button {
+  width: 100%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.editProfile-container button:hover, .editProject-container button:hover {
+  background-color: #45a049;
+}
+
+.fa-edit:hover, .fa-times {
+  cursor: pointer;
+}
+
+.editProfile-container .error-container, .editProject-container .error-container {
+  width: 80%;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.editProfile-container .error-container p, .editProject-container .error-container p {
+  color: red;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.navBarContainer {
+  position: fixed;
+  width: 100vw;
+  z-index: 5;
+  bottom: 0;
+  left: 0;
+}
+
+footer { 
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: linear-gradient(90deg, #212534 0%,#323645 50%);
+  color: white;
+  text-align: center;
+  
+  z-index: 5;
+}
+
+.buttons {
+      display: grid;
+      grid-template-columns: 33.333% 33.333% 33.333%;
+      
+      
+}
+
+button.footer {
+  background-color: #5ddcff;
+  text-transform: uppercase;
+    text-decoration: none;
+    display: inline-block;
+    transition: all .2s;
+    cursor: pointer;
+    font-size: 1.2rem;
+    border-radius:0px;
+}
+
+button.footer:hover, footer:hover{
+  background-color: #4ebad8;
+  transition: all 0.4s ease-in-out;
+}
+.fa-solid.fa-circle-plus {
+      margin-left: 30px;
+        }
+  
+  .fa-solid.fa-circle-plus:hover {
+      color: #000;
+      transition: all 0.4s ease-in-out;
+  }
+  
+    .home {
+      position: absolute;
+      bottom: 10px;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+    };
+
+  /*
+  * Project Container Component
+  */
+
+  .projectContainer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+  }
+
+  .home-container h5 {
+    color: #fff;
+    font-size: 18px;
+    background-color: rgba(158, 158, 158, 0.254);
+    padding: 20px;
+    width: 80%;
+    margin: auto;
+    border-radius: 8px;
+    margin-top: 20px;
+
+  }
+  .home-container h5:hover {
+    cursor: pointer;
+    background-color: rgba(158, 158, 158, 0.172);
+    transition: ease-in-out 0.3s;
+  }
+
+   /*
+  * Profile Container Component
+  */
+
+  .profile-container, .projectDetail-container, .editProject-container {
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 30px;
+    background-color: rgba(158, 158, 158, 0.254);
+    /* background-color: #191c29; */
+    color: #fff;
+    border-radius: 8px;
+} 
+
+.imageContainer img {
+  border-radius: 8px;
+  width: 200px;
+}
+
+.editProject-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  border-radius: 8px;
+}
+
+.goToSubtasks  {
+  background-color: #5ddcff;
+  text-transform: uppercase;
+    text-decoration: none;
+    display: inline-block;
+    transition: all .2s;
+    cursor: pointer;
+    font-size: 1.2rem;
+    border-radius:8px;
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 10px;
+    padding: 0px;
+}
+
+.goToSubtasks:hover {
+  background-color: #4ebad8;
+  transition: all 0.4s ease-in-out;
+}
+
+  /*
+  * Trello Page
+  */
+
+.lists {
+  
+  display: flex;
+  flex-wrap: wrap;
+  width: 90%;
+  justify-content: center;
+  
+  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 80px;
+  background-color: rgba(255, 255, 255, 0.039) ;
+  border-radius: 8px;
+  padding: 8px;
+}
+
+.delete-btn{
+  outline: none;
+  cursor: pointer;
+}
+
+#addTodoListDiv{
+  margin-left: 2em;
+  margin-top: 4em;
+}
+
+#addTodoListDiv button{
+  margin-left: 0.5em;
+}
+
+.todoList{
+  position: relative;
+  border-radius: 8px;
+  min-height: 100px;
+  background: rgba(158, 158, 158, 0.254);
+  padding: 0.7em;
+  margin: 0.5em 0.5em 1em 1em;
+
+  float: left;
+  max-width: 330px;
+
+  overflow: hidden;
+  height: 80vh;
+}
+
+.todoList h2{
+  font-size: 1em;
+  margin-bottom: 0.5em;
+}
+
+.todoListbutton{
+  margin-left: 0.5em;
+}
+
+.card{
+  /*border: 1px solid blue;*/
+  border-radius: 8px;
+  background: rgba(158, 158, 158, 0.254);
+  color: #fff;
+  margin: 0.5em 0 0 0;
+  padding: 0.5em;
+  font-size: 0.9em;
+  position: relative;
+
+  display: flex;
+  justify-content: space-between;
+
+  cursor: pointer;
+}
+
+.card button{
+  visibility: hidden;
+  height: max-content;
+
+  background: none;
+  border: none;
+  padding: 0.3em;
+  
+}
+
+
+.card:hover button{
+  visibility: visible;
+}
+
+.card button:hover{
+  background-color: rgba(158, 158, 158, 0.254);
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+
+.menuContainer{
+  display: flex;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: linear-gradient(90deg, #212534 0%,#323645 50%);
+  width: 100%;
+  height: 100%;
+}
+
+.menu{
+  top: 0;
+  left: 0;
+  background-color: rgb(235, 235, 235);
+  width: 500px;
+  min-height: 300px;
+
+  margin: auto;
+
+  padding: 1em;
+  border-radius: 8px;
+  
+}
+
+.menuTitle{
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-bottom: 1em;
+}
+
+.menuDescription{
+  margin-bottom: 2em;
+  line-height: 1.5em;
+}
+
+.menuDescription textarea{
+  width: 95%;
+  height: 5em;
+  padding: 0.5em;
+  font-size: 1.1em;
+}
+.comment:focus{
+  border: none;
+}
+
+
+
+.comment{
+  background-color: white;
+  border: none;
+  width: 76%;
+  border-radius: 4px;
+  margin-top: 0.5em;
+  padding: 0.5em;
+  font-size: 0.8em;
+}
+
+.commentsInput{
+  margin-right: 0.5em;
+}
+
+.btn-save{
+  background-color: #5aac44;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 0.5em;
+  margin-top: 0.5em;
+  
+}
+
+.delete-btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: transparent;
+  border: none;
+  box-shadow: 0px 10 10px 10px rgba(0, 0, 0, 0.25);
+  width: 25px;
+  height: 25px;
+}
+
+.delete-btn:before,
+.delete-btn:after {
+  content: '';
+  width: 55%;
+  height: 2px;
+  background: red;
+  position: absolute;
+  top: 48%;
+  left: 22%;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.delete-btn:after {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.delete-btn:hover:before,
+.delete-btn:hover:after {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
